1. Хранилище продуктов[#176793] - add chain of responsibility